feat: Update Next 15

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end-acara",
+  "name": "front-end-railvision",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@nextui-org/react": "^2.6.11",
-    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
-    "next": "14.2.28",
+    "next": "^15.1.7",
     "next-auth": "^4.24.11",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^2.6.0",
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.28",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
