--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,9 +18,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "target": "ES2017"
   },
@@ -32,9 +26,23 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "src/components/views/User/Dashboard/Dashboard.jsx", "src/components/views/User/Category/DetailCategory/DetailCategory.jsx", "src/components/views/User/Category/DetailCategory/useDetailCategory.js", "src/components/views/User/Category/DetailCategory/InfoTab/InfoTab.jsx", "src/components/views/User/Category/DetailCategory/InfoTab/useInfoTab.js", "src/components/views/User/Category/DetailCategory/IconTab/IconTab.jsx", "src/components/views/User/Category/DetailCategory/IconTab/useIconTab.js", "src/components/views/User/Station/DetailStation/IconTab/IconTab.jsx", "src/components/views/User/Station/DetailStation/IconTab/useIconTab.js", "src/components/views/User/Station/DetailStation/InfoTab/InfoTab.jsx", "src/components/views/User/Station/DetailStation/InfoTab/useInfoTab.js", "src/components/views/User/Station/DetailStation/LocationTab/LocationTab.jsx", "src/components/views/User/Station/DetailStation/LocationTab/useLocationTab.js", "src/components/views/User/Station/DetailStation/DetailStation.jsx", "src/components/views/User/Station/DetailStation/useDetailStation.js", "src/app/auth/activation/page.jsx"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    ".next/types/**/*.ts",
+    "src/components/views/User/Dashboard/Dashboard.jsx",
+    "src/components/views/User/Category/DetailCategory/DetailCategory.jsx",
+    "src/components/views/User/Category/DetailCategory/useDetailCategory.js",
+    "src/components/views/User/Category/DetailCategory/InfoTab/InfoTab.jsx",
+    "src/components/views/User/Category/DetailCategory/InfoTab/useInfoTab.js",
+    "src/components/views/User/Category/DetailCategory/IconTab/IconTab.jsx",
+    "src/components/views/User/Category/DetailCategory/IconTab/useIconTab.js",
+    "src/components/views/User/Station/DetailStation/IconTab/IconTab.jsx",
+    "src/components/views/User/Station/DetailStation/IconTab/useIconTab.js",
+    "src/components/views/User/Station/DetailStation/InfoTab/InfoTab.jsx",
+    "src/components/views/User/Station/DetailStation/InfoTab/useInfoTab.js",
+    "src/components/views/User/Station/DetailStation/LocationTab/LocationTab.jsx",
+    "src/components/views/User/Station/DetailStation/LocationTab/useLocationTab.js",
+    "src/components/views/User/Station/DetailStation/DetailStation.jsx",
+    "src/components/views/User/Station/DetailStation/useDetailStation.js",
+    "src/app/auth/activation/page.tsx"
+  ],
+  "exclude": ["node_modules"]
 }
