--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/views/User/Dashboard/Dashboard.jsx",
+    "src/components/views/User/Dashboard/Dashboard.tsx",
     "src/components/views/User/Category/DetailCategory/DetailCategory.jsx",
     "src/components/views/User/Category/DetailCategory/useDetailCategory.js",
     "src/components/views/User/Category/DetailCategory/InfoTab/InfoTab.jsx",
